--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,37 @@
   "version": 2,
   "buildCommand": "npm run vercel-build",
   "outputDirectory": "dist",
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Strict-Transport-Security",
+          "value": "max-age=31536000; includeSubDomains"
+        },
+        {
+          "key": "X-Frame-Options",
+          "value": "SAMEORIGIN"
+        },
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        }
+      ]
+    }
+  ],
+  "redirects": [
+    {
+      "source": "http://emuson.cn/(.*)",
+      "destination": "https://www.emuson.cn/$1",
+      "permanent": true
+    },
+    {
+      "source": "http://www.emuson.cn/(.*)",
+      "destination": "https://www.emuson.cn/$1",
+      "permanent": true
+    }
+  ],
   "rewrites": [
     {
       "source": "/(.*)",
