--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,11 @@
 {
-  "version": 2,
-  "buildCommand": "npm run vercel-build",
-  "outputDirectory": "dist",
+  "redirects": [
+    {
+      "source": "https://www.emuson.cn/:path*",
+      "destination": "https://emuson.cn/:path*",
+      "permanent": 301
+    }
+  ],
   "headers": [
     {
       "source": "/(.*)",
@@ -53,18 +57,6 @@
           "value": "public, max-age=31536000, immutable"
         }
       ]
-    }
-  ],
-  "redirects": [
-    {
-      "source": "http://emuson.cn/(.*)",
-      "destination": "https://www.emuson.cn/$1",
-      "permanent": true
-    },
-    {
-      "source": "http://www.emuson.cn/(.*)",
-      "destination": "https://www.emuson.cn/$1",
-      "permanent": true
     }
   ],
   "rewrites": [
